Bug 26294 - FAIL: gdb.gdb/unittest.exp: maintenance selftest (help doc broken invariant: command 'maintenance print core-file-backed-mappings')
Summary: FAIL: gdb.gdb/unittest.exp: maintenance selftest (help doc broken invariant: ...
Status: RESOLVED FIXED
Alias: None
Product: gdb
Classification: Unclassified
Component: corefiles (show other bugs)
Version: HEAD
: P2 normal
Target Milestone: ---
Assignee: Kevin Buettner
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-07-23 13:04 UTC by Tom de Vries
Modified: 2020-07-24 05:37 UTC (History)
1 user (show)

See Also:
Host:
Target:
Build:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tom de Vries 2020-07-23 13:04:31 UTC
...
Running selftest help_doc_invariants.^M
help doc broken invariant: command 'maintenance print core-file-backed-mappings' help doc first line is not terminated with a '.' character^M
Self test failed: self-test failed at /home/vries/gdb_versions/devel/src/gdb/unittests/command-def-selftests.c:100^M
Ran 61 unit tests, 1 failed^M
(gdb) FAIL: gdb.gdb/unittest.exp: maintenance selftest
...
Comment 1 Sourceware Commits 2020-07-23 20:42:55 UTC
The master branch has been updated by Kevin Buettner <kevinb@sourceware.org>:

https://sourceware.org/git/gitweb.cgi?p=binutils-gdb.git;h=513487e1a8feefec1ba8f51c1dec56800a927dfa

commit 513487e1a8feefec1ba8f51c1dec56800a927dfa
Author: Kevin Buettner <kevinb@redhat.com>
Date:   Thu Jul 23 13:26:44 2020 -0700

    Fix BZ 26294 - Add period to help text for maint print core-file-backed-mappings
    
    gdb/ChangeLog:
    
            PR corefiles/26294
            * corelow.c (_initialize_corelow): Add period to help text
            for "maintenance print core-file-backed-mappings".
Comment 2 Kevin Buettner 2020-07-24 05:37:08 UTC
Fixed.