Fix BZ 26294 - Add period to help text for maint print core-file-backed-mappings

gdb/ChangeLog:

	PR corefiles/26294
	* corelow.c (_initialize_corelow): Add period to help text
	for "maintenance print core-file-backed-mappings".